tests/baselines/reference/asyncModule.errors.txt
tests/cases/conformance/async/downlevel/asyncModule.ts(6,1): error TS1302: 'async' modifier cannot be used with a module declaration.


==== tests/cases/conformance/async/downlevel/asyncModule.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    async module M {   
    ~~~~~
!!! error TS1302: 'async' modifier cannot be used with a module declaration.
    }